--- a/main.html
+++ b/main.html
@@ -13,13 +13,14 @@
 	<a href="https://https://www.google.com/search?gs_ssp=eJzj4tDP1TfITc9OV2A0YHRg8GJLzE2sys8DAELoBhw&q=amazon&oq=amaz&aqs=chrome.1.35i39j46i20i131i199i263i433i465i512j69i57j35i39j0i433i512j0i20i131i263i433i512j69i60l2.3335j0j9&sourceid=chrome&ie=UTF-8" > About us </a> 
 	<a href="https://www.google.com/search?gs_ssp=eJzj4tLP1TdILkqpqihQYDRgdGDw4kjLySzITiwqAQBm2Afs&q=flipkart&oq=flip&aqs=chrome.3.69i57j35i39l2j46i131i199i433i465i512j0i131i433i512l2j0i433i512j0i131i433i512l2.6494j0j9&sourceid=chrome&ie=UTF-8" > Contact us </a> 
 	</nav>
-	<h1>3 random audios</h1>
 	
-	 <audio id="Test_Audio" controls>
+	<h> 3 random audios </h>
+	 <audio id="Test_Audio" controls >
 	<sourse src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg" >
-	 <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+	 <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" >
 	 <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg" >
 	 </audio>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
