--- a/main.html
+++ b/main.html
@@ -9,20 +9,28 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<nav>
-	<a href="https://www.google.co.in/"> Home </a> 
-	<a href="https://https://www.google.com/search?gs_ssp=eJzj4tDP1TfITc9OV2A0YHRg8GJLzE2sys8DAELoBhw&q=amazon&oq=amaz&aqs=chrome.1.35i39j46i20i131i199i263i433i465i512j69i57j35i39j0i433i512j0i20i131i263i433i512j69i60l2.3335j0j9&sourceid=chrome&ie=UTF-8" > About us </a> 
-	<a href="https://www.google.com/search?gs_ssp=eJzj4tLP1TdILkqpqihQYDRgdGDw4kjLySzITiwqAQBm2Afs&q=flipkart&oq=flip&aqs=chrome.3.69i57j35i39l2j46i131i199i433i465i512j0i131i433i512l2j0i433i512j0i131i433i512l2.6494j0j9&sourceid=chrome&ie=UTF-8" > Contact us </a> 
+		<ul>
+			<li><a href="https://www.google.co.in/"> Home </a> </li>
+<li>	<a href="https://https://www.google.com/search?gs_ssp=eJzj4tDP1TfITc9OV2A0YHRg8GJLzE2sys8DAELoBhw&q=amazon&oq=amaz&aqs=chrome.1.35i39j46i20i131i199i263i433i465i512j69i57j35i39j0i433i512j0i20i131i263i433i512j69i60l2.3335j0j9&sourceid=chrome&ie=UTF-8" > About us </a></li> 
+	<li><a href="https://www.google.com/search?gs_ssp=eJzj4tLP1TdILkqpqihQYDRgdGDw4kjLySzITiwqAQBm2Afs&q=flipkart&oq=flip&aqs=chrome.3.69i57j35i39l2j46i131i199i433i465i512j0i131i433i512l2j0i433i512j0i131i433i512l2.6494j0j9&sourceid=chrome&ie=UTF-8" > Contact us </a> </li>
+		</ul>
+	
 	</nav>
 	
-	<h> 3 random audios </h>
+	<h1> 3 random audios </h1>
 	 <audio  controls
-		 autoplay
-		 muted>
+		>
 	<sourse src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg" >
+		 </audio>
+	 <audio  controls
+		>
 	 <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" >
+		  </audio>
+	<audio  controls
+		>
 	 <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg" >
-	 </audio>
 	
+	 </audio>
     <script type="text/javascript" src="./script.js">
 </script>
 
